@@ -34,6 +34,7 @@ local $output;
 	"before"	=>	"",
 	"after"		=>	"",
 	"table_options"	=>	" type=InnoDB",
+	"exec_cmd"	=>	";\n",
 	"t_bigint"	=>	"bigint unsigned",
 	"t_id"		=>	"bigint unsigned",
 	"t_integer"	=>	"integer",
@@ -49,12 +50,13 @@ local $output;
 	"t_history_text"=>	"text",
 	"t_blob"	=>	"blob",
 	"t_item_param"	=>	"text",
-	"t_cksum_text"	=>	"text"  
+	"t_cksum_text"	=>	"text"
 );
 
 %c=(	"type"		=>	"code",
 	"database"	=>	"",
 	"after"		=>	"\t{0}\n};\n",
+	"exec_cmd"	=>	"\n",
 	"t_bigint"	=>	"ZBX_TYPE_UINT",
 	"t_id"		=>	"ZBX_TYPE_ID",
 	"t_integer"	=>	"ZBX_TYPE_INT",
@@ -101,6 +103,7 @@ ZBX_TABLE	tables[]={
 	"before"	=>	"",
 	"after"		=>	"",
 	"type"		=>	"sql",
+	"exec_cmd"	=>	"\n/\n\n",
 	"t_id"		=>	"number(20)",
 	"t_integer"	=>	"number(10)",
 	"t_time"	=>	"number(10)",
@@ -122,6 +125,7 @@ ZBX_TABLE	tables[]={
 	"after"		=>	"",
 	"type"		=>	"sql",
 	"table_options"	=>	" with OIDS",
+	"exec_cmd"	=>	";\n",
 	"t_id"		=>	"bigint",
 	"t_integer"	=>	"integer",
 	"t_serial"	=>	"serial",
@@ -142,6 +146,7 @@ ZBX_TABLE	tables[]={
 	"before"	=>	"BEGIN TRANSACTION;\n",
 	"after"		=>	"COMMIT;\n",
 	"type"		=>	"sql",
+	"exec_cmd"	=>	";\n",
 	"t_id"		=>	"bigint",
 	"t_integer"	=>	"integer",
 	"t_time"	=>	"integer",
@@ -164,16 +169,17 @@ sub newstate
 	switch ($state)
 	{
 		case "field"	{
-			if($output{"type"} eq "sql" && $new eq "index") { print "$pkey\n)$output{'table_options'};\n"; }
-			if($output{"type"} eq "sql" && $new eq "table") { print "$pkey\n)$output{'table_options'};\n"; }
-			if($output{"type"} eq "code" && $new eq "table") { print ",\n\t\t{0}\n\t\t}\n\t},\n"; }
+			if($output{"type"} eq "sql" && $new eq "index") { print "$pkey\n)$output{'table_options'}$output{'exec_cmd'}"; }
+			if($output{"type"} eq "sql" && $new eq "table") { print "$pkey\n)$output{'table_options'}$output{'exec_cmd'}"; }
+			if($output{"type"} eq "code" && $new eq "table") { print ",\n\t\t{0}\n\t\t}\n\t},$output{'exec_cmd'}"; }
 			if($new eq "field") { print ",\n" }
 		}
 		case "index"	{
-			if($output{"type"} eq "sql" && $new eq "table") { print ""; }
-			if($output{"type"} eq "code" && $new eq "table") { print ",\n\t\t{0}\n\t\t}\n\t},\n"; }
+			if($output{"type"} eq "sql" && $new eq "table") { print "${statements}"; }
+			if($output{"type"} eq "code" && $new eq "table") { print ",\n\t\t{0}\n\t\t}\n\t},$output{'exec_cmd'}"; }
 		}
 	 	case "table"	{
+			if($output{"type"} eq "sql" && $new eq "table") { print "${statements}"; }
 			print "";
 		}
 	}
@@ -186,6 +192,7 @@ sub process_table
 
 	newstate("table");
 	($table_name,$pkey,$flags)=split(/\|/, $line,4);
+	$statements="";
 
 	if($output{"type"} eq "code")
 	{
@@ -263,11 +270,14 @@ sub process_field
 		# Special processing for Oracle "default 'ZZZ' not null" -> "default 'ZZZ'. NULL=='' in Oracle!"
 		if(($output{"database"} eq "oracle") && ((0==index($type_2,"nvarchar2")) || (0==index($type_2,"nclob"))))
 		{
-		#	$default="DEFAULT NULL";
 			$null="";
 		}
+		else
+		{
+			$null="\t${null}";
+		}
 
-		$row="\t$name\t\t$type_2\t\t$default\t$null";
+		$row="\t$name\t\t$type_2\t\t$default${null}";
 
 		if($type eq "t_serial")
 		{
@@ -279,6 +289,19 @@ sub process_field
 			elsif($output{"database"} eq "mysql")
 			{
 				$row="$row\tauto_increment unique";
+			}
+			elsif($output{"database"} eq "oracle")
+			{
+				$statements="${statements}CREATE SEQUENCE ${table_name}_seq\n";
+				$statements="${statements}START WITH 1\n";
+				$statements="${statements}INCREMENT BY 1\n";
+				$statements="${statements}NOMAXVALUE$output{'exec_cmd'}";
+				$statements="${statements}CREATE TRIGGER ${table_name}_tr\n";
+				$statements="${statements}BEFORE INSERT ON ${table_name}\n";
+				$statements="${statements}FOR EACH ROW\n";
+				$statements="${statements}BEGIN\n";
+				$statements="${statements}SELECT proxy_history_seq.nextval INTO :new.id FROM dual;\n";
+				$statements="${statements}END;$output{'exec_cmd'}";
 			}
 		}
 		print $row;
@@ -301,11 +324,11 @@ sub process_index
 
 	if($unique == 1)
 	{
-		print "CREATE UNIQUE INDEX ${table_name}_$name\ on $table_name ($fields);\n";
+		print "CREATE UNIQUE INDEX ${table_name}_$name\ on $table_name ($fields)$output{'exec_cmd'}";
 	}
 	else
 	{
-		print "CREATE INDEX ${table_name}_$name\ on $table_name ($fields);\n";
+		print "CREATE INDEX ${table_name}_$name\ on $table_name ($fields)$output{'exec_cmd'}";
 	}
 }
 
@@ -355,7 +378,6 @@ sub main
 			case "FIELD"	{ process_field($line); }
 		}
 	}
-
 }
 
 main();
