@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-1991] added sequences for autoincrement fields in oracle.sql script (Sasha)
  - [ZBX-2045] fixed trigger editor does not preserve element ordering (Vedmak)
  - [ZBX-2003] fixed evaluation of division and subtraction (asaveljevs)
  - [ZBX-2029] fixed monitoring triggers showing triggers with true dependencies (Vedmak)
